--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 mybatis.config-location=classpath:config/mybatis-config.xml
 mybatis.mapper-locations= classpath:mapper/*.xml
 
-log4j.logger.java.sql=DEBUG
+#log4j.logger.java.sql=DEBUG
 logging.level.com.example.*=debug
